--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,21 +1,21 @@
 .home {
   height: 100%;
   padding-top: 40vh;
+  overflow: hidden;
   align-items: center;
   text-align: center;
   background: linear-gradient(
-    to right,
-    rgb(251, 154, 137),
-    tomato,
-    rgb(255, 71, 39),
-    rgb(253, 12, 12)
-  );
+      to right,
+      rgba($primary-color, 0.7),
+      rgba($primary-color, 0)
+    ),
+    url("../images/background.jpg") center top;
   background-size: cover;
 
   &__name {
     font-size: 5rem;
     padding-bottom: 1rem;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
     border-bottom: 2px solid set-text-color($primary-color);
 
     &--last {
