--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,9 @@
 @import "config";
 @import "home";
 @import "menu";
+@import "about";
+@import "projects";
+@import "contact";
 
 body {
   background: $primary-color;
@@ -19,6 +22,10 @@ h3 {
 a {
   color: #fff;
   text-decoration: none;
+}
+
+.text-secondary {
+  color: $secondary-color;
 }
 
 header {
